--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "install:full": "npm install && cd client && npm install",
     "start": "node ./bin/www",
-    "start:dev": "cross-env DEBUG=uchjoby:* env=development npm start",
+    "start:dev": "cross-env DEBUG=uchjoby:* env=development nodemon ./bin/www",
     "test": "mocha --recursive ./test"
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "cross-env": "^5.2.0",
     "debug": "~2.6.9",
     "dotenv": "^5.0.0",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.0",
@@ -38,6 +38,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
+    "nodemon": "^1.18.3",
     "sinon": "^4.2.2",
     "sinon-chai": "^2.14.0"
   }
