--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-spring": "^5.5.4",
     "redux": "^4.0.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
