--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "1.1.4",
     "react-spring": "^5.5.4",
     "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "styled-components": "^3.3.3"
